--- a/tutorials/Tutorial-aCCORDiON.ipynb
+++ b/tutorials/Tutorial-aCCORDiON.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ce462469",
+   "id": "e5499881",
    "metadata": {},
    "source": [
     "# Tutorial: ACCorDIoN test data"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6811a3e0",
+   "id": "f6d9972e",
    "metadata": {},
    "source": [
     "## Load Libraries"
@@ -31,15 +31,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c218f0b7",
+   "id": "5c9e4f1d",
    "metadata": {},
    "source": [
-    "### 1. Loading data and metadata"
+    "#### 1. Loading data and metadata"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "id": "b2e271df",
    "metadata": {},
    "outputs": [],
@@ -50,15 +50,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa1b7753",
+   "id": "b46a2bc9",
    "metadata": {},
    "source": [
-    "### 2. This are tables made by CrossTalkeR/Liana therefore we need to filter it to keep only the single(per sample) networks"
+    "#### 2. This are tables made by CrossTalkeR/Liana therefore we need to filter it to keep only the single(per sample) networks"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "id": "1c281198",
    "metadata": {},
    "outputs": [],
@@ -68,20 +68,28 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae371709",
+   "id": "75cbb8ae",
    "metadata": {},
    "source": [
-    "### 3. Now with the tables from CrossTalkeR/Liana we build the Accordion Object "
+    "#### 3. Now with the tables from CrossTalkeR/Liana we build the Accordion Object "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "e1875d85",
+   "id": "1d0bfd56",
    "metadata": {},
    "outputs": [],
    "source": [
     "AaccPDAC = Accordion(tbls=data,weight='lr_means')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c9fa4d7",
+   "metadata": {},
+   "source": [
+    "#### 4. Computing a PCA using the edge distribuition per sample"
    ]
   },
   {
@@ -95,6 +103,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a62626a3",
+   "metadata": {},
+   "source": [
+    "#### 5. Normalizing the data $\\mathcal{P}$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "01746cdd",
@@ -103,6 +119,36 @@
    "source": [
     "for i in AaccPDAC.p.columns:\n",
     "    AaccPDAC.p[i] = AaccPDAC.p[i]/AaccPDAC.p[i].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "5b9d374c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'sns' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m sns\u001b[38;5;241m.\u001b[39mheatmap(AaccPDAC\u001b[38;5;241m.\u001b[39mp)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'sns' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "sns.heatmap(AaccPDAC.p)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a58d5e6",
+   "metadata": {},
+   "source": [
+    "#### 6. Building the Cost Matrix"
    ]
   },
   {
@@ -258,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "bda01153",
+   "id": "8420610c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "c3dbe19b",
+   "id": "4ff44ad1",
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "bed8c532",
+   "id": "281e38ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "3645750a",
+   "id": "aaaf3ffc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "54e674de",
+   "id": "c8a51857",
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "27a14e8f",
+   "id": "2b3c100c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "09df0132",
+   "id": "4946924a",
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "1d751702",
+   "id": "aec3b21d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "977a5e59",
+   "id": "d64e5982",
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "0b15345a",
+   "id": "37beb244",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "d353ec1a",
+   "id": "e4fcc2fc",
    "metadata": {},
    "outputs": [
     {
